k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-reverse-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-reverse-proxy
  template:
    metadata:
      labels:
        app: secure-reverse-proxy
    spec:
      containers:
        - name: app
          image: kehindemasuud/sca-capstone-app:latest
          ports:
            - containerPort: 8000
