k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-reverse-proxy
spec:
  type: NodePort
  selector:
    app: secure-reverse-proxy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
